<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VRFragment">

    <TextView
        android:id="@+id/colorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6326CF"
        android:backgroundTint="#FFEB3B" />

    <LinearLayout
        android:id="@+id/lineLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/onCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onCreate" />

        <TextView
            android:id="@+id/onStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onStart" />

        <TextView
            android:id="@+id/onStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onStop" />

        <TextView
            android:id="@+id/onDestroy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onDestroy" />
    </LinearLayout>

</FrameLayout>