<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VRActivity">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:background="#8BC34A"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/createview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createview" />

        <TextView
            android:id="@+id/startview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startview" />

        <TextView
            android:id="@+id/stopview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stopview" />

        <TextView
            android:id="@+id/destroyview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destroyview" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>